# avante.nvim

./: .editorconfig  .gitignore  Makefile  README.md
crates/avante-repo-map/: Cargo.toml
crates/avante-repo-map/src/: lib.rs
crates/avante-tokenizers/: Cargo.toml
crates/avante-tokenizers/src/: lib.rs
lua/avante/: sidebar.lua
scripts/: minimal_init.lua
tests/: test_repo_map.lua
