[lib]
crate-type = ["cdylib", "rlib"]

[package]
name = "avante-tokenizers"
edition = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[dependencies]
mlua = { workspace = true, features = ["luajit"] }
tiktoken-rs = { workspace = true }
tokenizers = { workspace = true }

